apollo-federation/src/sources/connect/expand/tests/snapshots/it_expand_supergraph@circular.graphql.snap
---
source: apollo-federation/src/sources/connect/expand/tests/mod.rs
expression: api_schema
input_file: apollo-federation/src/sources/connect/expand/tests/schemas/expand/circular.graphql
---
directive @defer(label: String, if: Boolean! = true) on FRAGMENT_SPREAD | INLINE_FRAGMENT

type Query {
  t(id: ID): T
}

type T {
  id: ID!
  ts: [T]
}
