apollo-federation/src/sources/connect/expand/tests/snapshots/it_expand_supergraph@simple.graphql-2.snap
---
source: apollo-federation/src/sources/connect/expand/tests/mod.rs
expression: connectors.by_service_name
input_file: apollo-federation/src/sources/connect/expand/tests/schemas/expand/simple.graphql
---
{
    "connectors_Query_users_0": Connector {
        id: ConnectId {
            label: "connectors.example http: GET ",
            subgraph_name: "connectors",
            source_name: Some(
                "example",
            ),
            directive: ObjectOrInterfaceFieldDirectivePosition {
                field: Object(Query.users),
                directive_name: "connect",
                directive_index: 0,
            },
        },
        transport: HttpJsonTransport {
            source_url: Some(
                Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "example",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ),
            connect_template: URLTemplate {
                base: None,
                path: [],
                query: {},
            },
            method: Get,
            headers: {},
            body: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "id",
                            ),
                            range: Some(
                                0..2,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "a",
                            ),
                            range: Some(
                                3..4,
                            ),
                        },
                        None,
                    ),
                ],
                range: Some(
                    0..4,
                ),
                output_shape: None,
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: None,
        spec: V0_1,
        request_variables: {},
        response_variables: {},
    },
    "connectors_Query_user_0": Connector {
        id: ConnectId {
            label: "connectors.example http: GET /{$args.id}",
            subgraph_name: "connectors",
            source_name: Some(
                "example",
            ),
            directive: ObjectOrInterfaceFieldDirectivePosition {
                field: Object(Query.user),
                directive_name: "connect",
                directive_index: 0,
            },
        },
        transport: HttpJsonTransport {
            source_url: Some(
                Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "example",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ),
            connect_template: URLTemplate {
                base: None,
                path: [
                    Component {
                        parts: [
                            Var(
                                VariableReference {
                                    namespace: VariableNamespace {
                                        namespace: $args,
                                        location: 2..7,
                                    },
                                    path: [
                                        VariablePathPart {
                                            part: "id",
                                            location: 8..10,
                                        },
                                    ],
                                    location: 2..10,
                                },
                            ),
                        ],
                    },
                ],
                query: {},
            },
            method: Get,
            headers: {},
            body: None,
        },
        selection: Named(
            SubSelection {
                selections: [
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "id",
                            ),
                            range: Some(
                                0..2,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "a",
                            ),
                            range: Some(
                                3..4,
                            ),
                        },
                        None,
                    ),
                    Field(
                        None,
                        WithRange {
                            node: Field(
                                "b",
                            ),
                            range: Some(
                                5..6,
                            ),
                        },
                        None,
                    ),
                ],
                range: Some(
                    0..6,
                ),
                output_shape: None,
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Explicit,
        ),
        spec: V0_1,
        request_variables: {
            $args,
        },
        response_variables: {},
    },
    "connectors_User_d_1": Connector {
        id: ConnectId {
            label: "connectors.example http: GET /{$this.c}/d",
            subgraph_name: "connectors",
            source_name: Some(
                "example",
            ),
            directive: ObjectOrInterfaceFieldDirectivePosition {
                field: Object(User.d),
                directive_name: "connect",
                directive_index: 1,
            },
        },
        transport: HttpJsonTransport {
            source_url: Some(
                Url {
                    scheme: "http",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: Some(
                        Domain(
                            "example",
                        ),
                    ),
                    port: None,
                    path: "/",
                    query: None,
                    fragment: None,
                },
            ),
            connect_template: URLTemplate {
                base: None,
                path: [
                    Component {
                        parts: [
                            Var(
                                VariableReference {
                                    namespace: VariableNamespace {
                                        namespace: $this,
                                        location: 2..7,
                                    },
                                    path: [
                                        VariablePathPart {
                                            part: "c",
                                            location: 8..9,
                                        },
                                    ],
                                    location: 2..9,
                                },
                            ),
                        ],
                    },
                    Component {
                        parts: [
                            Text(
                                "d",
                            ),
                        ],
                    },
                ],
                query: {},
            },
            method: Get,
            headers: {},
            body: Some(
                Named(
                    SubSelection {
                        selections: [
                            Path {
                                alias: Some(
                                    Alias {
                                        name: WithRange {
                                            node: Field(
                                                "with_b",
                                            ),
                                            range: Some(
                                                0..6,
                                            ),
                                        },
                                        range: Some(
                                            0..7,
                                        ),
                                    },
                                ),
                                inline: false,
                                path: PathSelection {
                                    path: WithRange {
                                        node: Var(
                                            WithRange {
                                                node: $this,
                                                range: Some(
                                                    8..13,
                                                ),
                                            },
                                            WithRange {
                                                node: Key(
                                                    WithRange {
                                                        node: Field(
                                                            "b",
                                                        ),
                                                        range: Some(
                                                            14..15,
                                                        ),
                                                    },
                                                    WithRange {
                                                        node: Empty,
                                                        range: Some(
                                                            15..15,
                                                        ),
                                                    },
                                                ),
                                                range: Some(
                                                    13..15,
                                                ),
                                            },
                                        ),
                                        range: Some(
                                            8..15,
                                        ),
                                    },
                                },
                            },
                        ],
                        range: Some(
                            0..15,
                        ),
                        output_shape: None,
                    },
                ),
            ),
        },
        selection: Path(
            PathSelection {
                path: WithRange {
                    node: Var(
                        WithRange {
                            node: $,
                            range: Some(
                                0..1,
                            ),
                        },
                        WithRange {
                            node: Empty,
                            range: Some(
                                1..1,
                            ),
                        },
                    ),
                    range: Some(
                        0..1,
                    ),
                },
            },
        ),
        config: None,
        max_requests: None,
        entity_resolver: Some(
            Implicit,
        ),
        spec: V0_1,
        request_variables: {
            $this,
        },
        response_variables: {},
    },
}
